Adiciona fontes e links

--- a/index-Vine.html
+++ b/index-Vine.html
@@ -5,10 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio de Vinicius P. Vergani</title>
+    <style> 
+        body {
+            font-family: Monserrat, sans-serif
+        }
+        p{
+            color: #475550
+        }
+    
+
+    </style>
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400&family=Varela+Round&display=swap" rel="stylesheet">
+CSS rules to specify families
+
+
+
 </head>
 <body>
-   <h1>Portifólio by Vinicius Polo Vergani</h1> 
-   <h2>Portifólio criado a fim apresentar os projetos por min desenvolvidos no decorrer do curso realizado na Trybe</h2>
+   <h1 style="font-family: Mulish, serif" >Portifólio by Vinicius Polo Vergani</h1> 
+   <h2 style="font-family: Mulish, serif" >Portifólio criado a fim apresentar os projetos por min desenvolvidos no decorrer do curso realizado na Trybe</h2>
     <hr>
  <img class="bkgimg" src="https://image.freepik.com/fotos-gratis/codigo-fonte-da-area-de-trabalho-e-papel-de-parede-por-linguagem-de-computador-com-codificacao-e-programacao_33771-595.jpg" alt="Papel de parede  com um codico de programação aparente utulizado como fundo do site">
 
