--- a/index-Vine.html
+++ b/index-Vine.html
@@ -19,17 +19,28 @@
 
 </head>
 <body>
-   <h1 style="font-family: Mulish, serif" >Portifólio by Vinicius Polo Vergani</h1> 
-   <h2 style="font-family: Mulish, serif" >Portifólio criado a fim apresentar os projetos por min desenvolvidos no decorrer do curso realizado na Trybe</h2>
-    <hr>
- <img class="bkgimg" src="https://image.freepik.com/fotos-gratis/codigo-fonte-da-area-de-trabalho-e-papel-de-parede-por-linguagem-de-computador-com-codificacao-e-programacao_33771-595.jpg" alt="Papel de parede  com um codico de programação aparente utulizado como fundo do site">
 
+    
 
-    <p>Olá, eu sou o Vinícius, tenho 25 anos e atualmente sou estudante de desenvolvimento web na <strong><em> Trybe</em></strong>, além disso tenho uma graduação quase concluída em engenharia civil a qual inicie em 2013. Ah você deve estar se perguntando agora porque essa mudança de área a essa altura do campeonato certo? Bom tudo começou com um amigo que seguiu essa área e que a noite sempre jogavamos (principalmente jogos de FPS), conecido como <strong>RyWillRx</strong> e depois uma cadeira de faculdade chamada Algoritmos e Programação, que apesar de básica, ( Utilizávamos VisualG e escrevíamos os códigos em Portugol) chamou muito a minha atenção já que diferente da maioria dos meus colegas que não gostavam e tinham medo de reprovação eu estava simplesmente amando e indo incrivelmente bem, inclusive ajudando meus amigos que estavam na cadeira e com dificuldades, desde então tive vontade de me aprofundar na área pelos <em>últimos 3 anos</em> , inclusive sempre fui incentivado pelo amigo citado a ingressar na área, mas nunca encontrando um curso no qual me identificasse, aprendi também nesse meio tempo um pouco sobre arduinos (funcionamento e programação) oque me abriu a oportunidade de entre 2019 e 2020 ser bolsita de iniciação cientifica junto ao casal de professores mais incrível que já conheci, Professor <Strong>Cláudio Zorzi</Strong> e Professora <strong> Janete E. Zorzi </strong> com os quais ajudei desenvolver o mestrado de um de seus alunos, construindo e programando um sistema utilizando arduino e periféricos para a elaboração de um sistema de tração para ensaios de fibras naturais. Por fim chegamos a 2021, quando conheço a <strong><em> Trybe</em></strong> e sua proposta de ensino diferenciada do mercado e me identifico na hora e não pensei duas vezes em me inscrever, e bom cá estou eu...</p>
+        <div class="title">
+            <h1 class="title" >Portifólio by Vinicius Polo Vergani</h1> 
+            <!-- <h2 class="stitle" >Portifólio criado a fim apresentar os projetos por min desenvolvidos no decorrer do curso realizado na Trybe</h2> -->
+        </div>
+        <div class="header">
+        <!-- <img class="bkgimg" src="https://image.freepik.com/fotos-gratis/codigo-fonte-da-area-de-trabalho-e-papel-de-parede-por-linguagem-de-computador-com-codificacao-e-programacao_33771-595.jpg" alt="Papel de parede  com um codico de programação aparente utulizado como fundo do site"> -->
 
-    <img src="images/Foto perfil sorrindo.jpg" alt="Foto de Vinicius P. Vergani sorrindo de braços cruzados utilizando roupa formal em fundo escuro" width="500px">
-    <img src="images/Foto perfil seria.jpg" alt="Foto de Vinicius P. Vergani sorrindo de braços cruzados utilizando roupa formal em fundo escuro" width="500px">
-    <img src="images/foto com a maya.jpg" alt="Foto de Vinicius P. Vergani sorrindo, utilizando toga de formatura e segurando no colo um filhote de husky siberiano chamada Maya" width="500px">
+                <div class="intro"> 
+            <p>Olá, eu sou o Vinícius, tenho 25 anos e atualmente sou estudante de desenvolvimento web na <strong><em> Trybe</em></strong>, além disso tenho uma graduação quase concluída em engenharia civil a qual inicie em 2013. Ah você deve estar se perguntando agora porque essa mudança de área a essa altura do campeonato certo? Bom tudo começou com um amigo que seguiu essa área e que a noite sempre jogavamos (principalmente jogos de FPS), conecido como <strong>RyWillRx</strong> e depois uma cadeira de faculdade chamada Algoritmos e Programação, que apesar de básica, ( Utilizávamos VisualG e escrevíamos os códigos em Portugol) chamou muito a minha atenção já que diferente da maioria dos meus colegas que não gostavam e tinham medo de reprovação eu estava simplesmente amando e indo incrivelmente bem, inclusive ajudando meus amigos que estavam na cadeira e com dificuldades, desde então tive vontade de me aprofundar na área pelos <em>últimos 3 anos</em> , inclusive sempre fui incentivado pelo amigo citado a ingressar na área, mas nunca encontrando um curso no qual me identificasse, aprendi também nesse meio tempo um pouco sobre arduinos (funcionamento e programação) oque me abriu a oportunidade de entre 2019 e 2020 ser bolsita de iniciação cientifica junto ao casal de professores mais incrível que já conheci, Professor <Strong>Cláudio Zorzi</Strong> e Professora <strong> Janete E. Zorzi </strong> com os quais ajudei desenvolver o mestrado de um de seus alunos, construindo e programando um sistema utilizando arduino e periféricos para a elaboração de um sistema de tração para ensaios de fibras naturais. Por fim chegamos a 2021, quando conheço a <strong><em> Trybe</em></strong> e sua proposta de ensino diferenciada do mercado e me identifico na hora e não pensei duas vezes em me inscrever, e bom cá estou eu...</p>
+            </div>
+
+            <div class= "profilepic">
+            <img src="images/Foto perfil sorrindo.jpg" alt="Foto de Vinicius P. Vergani sorrindo de braços cruzados utilizando roupa formal em fundo escuro" width="500px" border-radius= 50% >
+            <!-- <img src="images/Foto perfil seria.jpg" alt="Foto de Vinicius P. Vergani serio de braços cruzados utilizando roupa formal em fundo escuro" width="500px"> -->
+            <!-- <img src="images/foto com a maya.jpg" alt="Foto de Vinicius P. Vergani sorrindo, utilizando toga de formatura e segurando no colo um filhote de husky siberiano chamada Maya" width="500px"> -->
+            </div>
+
+    </div>
+
 
     <h2>Sobre mim:</h2>
     <ul>
