Substitui facebook por steam e adciona botoes com links

--- a/index-Vine.html
+++ b/index-Vine.html
@@ -57,13 +57,13 @@
 
                 <div class="sociais">
                 <img class="icons"  src="images/logo-linkedin-square.jpg" alt="simbolo linked in" width="150px">
-
+                <a class="button" href="https://www.linkedin.com/in/vin%C3%ADcius-polo-vergani-5b60371a4/" target="_blank">Linked In</a>
 
                 </div>
 
                 <div class="sociais">
-                <img class="icons" src="images/square-facebook-icon.jpg" alt="logo Facebook" width="150px">
-
+                <img class="icons" src="images/toppng.com-ow-white-steam-icon-502x498.png" alt="logo Steam" width="150px">
+                <a class="button" href="https://steamcommunity.com/profiles/76561198050572037/" target="_blank">Steam</a>
 
                 </div>
 
